--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 	-->
 
 	<application
-		android:allowBackup="false"
+		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/label"
 		android:requestLegacyExternalStorage="true"
